--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Variables, Explicitly Typed Variable, <br>, C# Data types, Operators and Keyword
 </center>
 <center> 
 <h3>
-Copyright &copy; 2024 vishal verma - All Rights Reserved...
+Copyright &copy; 2024 <a href="https://www.youtube.com/channel/UCB_54mE3EY6oMc21pzlSkWw">Vishal Verma</a> - All Rights Reserved...
 </h3>
 </center>
 </body>
