--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <head>
 <title>Project 1</title>
 </head>
+
 <body style="background-color : #AED6F1 ">
 <center> 
 <h1> Index</h1>
+
 <table Border="5" style="background-color: #D6EAF8">
+
 <tr>
-<th style ="color:red"><center><b><h1>Unit's</h1></b></center></th>
-<td><center><b><h1>Topic's</h1><b></center></td>
+<th style ="color:red"><center> <b> <h1>Unit's</h1> </b> </center> </th>
+<th style ="color:red"><center> <b> <h1>Unit Name</h1> </b></center> </th>
+<td style ="color : red"><center><b><h1>Topic's</h1><b></center></td>
 </tr>
+
 <tr>
 <td><h2><a href="unit1.html">Unit 1</a></h2><br></td>
+<td><p><b>Web Programming Introduction </b></p></td>
 <td><p><b>Compilation Process of .Net Framework, Different types of application,<br>
  Web Application Introduction, the Understanding role of the web server and web browser, <br>
 Object Orientation; Type Safety, ; Memory Management, Platform Support;
  C# and CLR; CLR</b></p></td>
 </tr>
+
 <tr>
-<td><h1><a href="unit2.html">Unit 2</a></h1><br> </td>
+<td><h2><a href="unit2.html">Unit 2</a></h2><br> </td>
+<td><p><b>C# Language Fundamentals </b></p></td>
 <td><p><b>Java Vs C#, History and Features, C# Program, Declaring and Initializing, 
 Variables, Explicitly Typed Variable, <br>, C# Data types, Operators and Keywords, 
 , Interface,  Control Flow Statements,<br> Operator, Looping Syntax, 
@@ -26,18 +34,45 @@ Variables, Explicitly Typed Variable, <br>, C# Data types, Operators and Keyword
 
 </b></p> </td>
 </tr>
+
+<tr>
+<td><h2><a href="unit3.html">Unit 3</a></h1><br></td>
+<td><p><b>Function and Arrays </b></p></td>
+<td><p><b>Advantage of Function, Declaration of Function and Its Syntax, User-Defined Functions,<br>
+ Call by Value and Call by Reference, Recursion, User Input and Output in C#,<br>
+ Arrays, Array Declaration and Initialization, Multidimensional Arrays, Accessing Array Elements,<br>
+ Accessing Array using Loop, Passing Array to Function, Complete Opps,<br></p></td>
+</tr>
+
+<tr>
+<td><h2><a href="unit4.html">Unit 4</a></h2><br></td>
+<td><p><b>Graphical User Interface Concepts </b></p></td>
+<td><p><b>  Event Handling: mouse and keyboard, , Labels, Textboxes, Checkboxes, Radio Buttons,<br>
+ Picture Boxes, Month Calendar, , Date Time Picker, Link Label, Grid View, <br>
+ Combo Box, Multi-threading: Thread States, Life cycle of thread, Thread Priorities,<br>
+ Exception Handling </td></p></b>
+</tr>
+
+<tr>
+<td><h2><a href="unit5.html">Unit 5</a></h1><br></td>
+<td><p><b>GUI with ADO.NET </b></p></td>
+<td><p><b> ADO.NET Introduction, ADO.NET Data Providers, ADO.NET SQL Server,<br>
+, ADO.NET Connection, ADO.NET Command, ADO.NET DataReader,<br>
+ ADO.NET DataSet, ADO.NET DataAdapter</td></p></b>
+</tr>
 </table>
 
 
 
-<h1><a href="unit3.html">Unit 3</a></h1><br>
-<h1><a href="unit4.html">Unit 4</a></h1><br>
-<h1><a href="unit5.html">Unit 5</a></h1><br>
-<h1><a href="https://www.google.com/">HELP</a></h1><br>
+
+
+
+
 </center>
+
 <center> 
 <h3>
-Copyright &copy; 2024 <a href="https://www.youtube.com/channel/UCB_54mE3EY6oMc21pzlSkWw">Vishal Verma</a> - All Rights Reserved...
+Copyright &copy; 2024 <a href="https://www.instagram.com/verma_viishal/">Vishal Verma</a> - All Rights Reserved...
 </h3>
 </center>
 </body>
