--- a/unit1.html
+++ b/unit1.html
@@ -268,7 +268,7 @@ The Common Language Runtime implements the VES (Virtual Execution System) which 
 time system that provides a managed code execution environment. The VES is defined in Microsoft’s
  implementation of the CLI (Common Language Infrastructure).<br>
  <h2><center>Architecture of Common Language Runtime</center></h2>
- <center><img src="C:\Users\DELL\OneDrive\Documents\HTML logos\clr.png"></center>
+ <center><img src="clr.png"></center>
 
 
 
