--- a/unit1.html
+++ b/unit1.html
@@ -1,14 +1,15 @@
 <html>
 <head>
 <title>Project 1</title>
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-<center> 
+  
 
-<table border="2">
+<table>
 <tr>
-<td><center><h3>Unit 1</h3></center></td>
-<td><center><h3>Topic<h3></center></td>
+<td> <h3>Unit 1</h3> </td>
+<td> <h3>Topic<h3> </td>
 </tr>
 <tr>
 <td>Web Programming Introduction </td>
@@ -21,8 +22,8 @@ Web Application Introduction, the Understanding role of the web server and web b
 
 
 
-</center>
-<center><h1>1.1 The compilation process of .NET Framework </h1></center>
+ 
+ <h1>1.1 The compilation process of .NET Framework </h1> 
  <p>The compilation process of .NET Framework involves several steps, starting 
  from source code to the final executable or assembly. 
  <br>Here's an overview of the compilation process:<br>
@@ -56,7 +57,8 @@ accurately during runtime. This approach provides platform independence,
 </p>
 
 
-<p><center><h1>1.2 Different types of application in c#.net</h1></center>
+ <h1>1.2 Different types of application in c#.net</h1> 
+<p>
 
 In C#.NET, you can develop various types of applications for different purposes.
  Here are some common types of applications you can create:<br>
@@ -101,19 +103,21 @@ These are some of the most common types of applications that can be developed us
 
 
 </p>
+<div>
 
-<p>
-<h1><center>1.3 Web Application Introduction</center></h1>
+<h1> 1.3 Web Application Introduction </h1>
+
 A web application developed in C#.NET typically involves using the ASP.NET framework,
  which provides tools and libraries for building
  dynamic and interactive web applications. Here's an introduction to web application 
  development in C#.NET:<br>
  <h2>ASP.NET Framework:</h2><br>
- ASP.NET is a web development framework built by Microsoft, which allows developers to 
+ <p>ASP.NET is a web development framework built by Microsoft, which allows developers to 
  create web applications and services using various programming languages, including C#.
  ASP.NET provides a robust set of libraries, tools, and patterns for building modern 
- web applications.<br>
+ web applications.</p><br>
  <h2>Key Components of ASP.NET Web Applications:</h2>
+ 
  <b>1.Web Forms:</b> Web Forms is a part of ASP.NET that simplifies building web pages with
  server-side controls. It allows developers to create web forms with a drag-and-drop interface,
  similar to desktop applications, and handle events on the server.<br>
@@ -166,10 +170,10 @@ and flexible platform for building modern and scalable web solutions.
  Whether you're building a simple web form or a complex enterprise application, 
  ASP.NET provides the tools and technologies to meet your development needs.<br>
 
-</p>
+</div>
 
 
-<h1><center>1.4 The Understanding role of the web server and web browser</center></h1>
+<h1> 1.4 The Understanding role of the web server and web browser </h1>
 
 <table border="5">
 <tr>
@@ -177,26 +181,26 @@ and flexible platform for building modern and scalable web solutions.
 <th>Web Browser</th>
 </tr>
 <tr>
-<td><center>A web browser is an application software that can process and
+<td> A web browser is an application software that can process and
  display a web page on the internet. The web browser is capable to 
  make a request for web services and documents to web server. It acts
  an interface between the server and the client. As web browser
  is a software, thus it is to be installed on the client computer
  and used to surf the internet for websites and web pages. Popular 
  examples of web browsers include Google Chrome, Microsoft Internet
- Explorer, Microsoft Edge, Mozilla Firefox, Opera Mini, etc.</center></td>
- <td><center>A web server is a dedicated computer that sends
+ Explorer, Microsoft Edge, Mozilla Firefox, Opera Mini, etc. </td>
+ <td> A web server is a dedicated computer that sends
  web based documents to the client’s computer when request
  through the web browser. A web server accepts HTTP request 
  from the client’s browser, processes it to find the required 
  document, and then sends a suitable response to client machine.
 A web server is a basically a set of hardware and
  software whose primary function is to serve web-based
- material through the internet on demand.</center></td>
+ material through the internet on demand. </td>
 </tr>
 </table>
 
-<h1><center> 1.5 Object Orientation; Type Safety, ; Memory Management, Platform Support</center></h1>
+<h1>  1.5 Object Orientation; Type Safety, ; Memory Management, Platform Support </h1>
 <p>
 <h2>Object Orientation:</h2>
 <b>1.Classes and Objects:</b> C# is a fully object-oriented language,
@@ -267,18 +271,20 @@ The Common Language Runtime in the .NET Framework is the Virtual Machine compone
 The Common Language Runtime implements the VES (Virtual Execution System) which is a run 
 time system that provides a managed code execution environment. The VES is defined in Microsoft’s
  implementation of the CLI (Common Language Infrastructure).<br>
- <h2><center>Architecture of Common Language Runtime</center></h2>
- <center><img src="clr.png"></center>
+ <h2> Architecture of Common Language Runtime </h2>
+  
 
 
 
- 
+ <div id="im"><img src="C:\Users\DELL\OneDrive\Documents\HTML logos\clr.png"> <br>
+</div>
 </p>
-<center><a href="unit2.html">Next Page2</a>
 
-<br>
-<a href="index.html">Back</a><br>
-<a href="index.html">Home<a/></center>
+
+<center><button><a href="unit2.html">Next Page2</a></center></button><br>
+<center><button><a href="index.html">Back</a></button><br></center>
+<center><button><a href="index.html">Home</button><a/></center> 
+
 </body>
 
 </html>
