--- a/unit1.html
+++ b/unit1.html
@@ -276,7 +276,7 @@ time system that provides a managed code execution environment. The VES is defin
 
 
 
- <div id="im"><img src="C:\Users\DELL\OneDrive\Documents\HTML logos\clr.png"> <br>
+ <div id="im"><img src="clr.png"> <br>
 </div>
 </p>
 
